# csvloader

./: README.md  pyproject.toml  rxconfig.py
csvloader/: csvloader.py  csvsniff.py
tests/: small_test.py  test_cvsniff.py
